[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "App to perform Portfolio Analysis and provide BUY and SELL Recommendations"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "streamlit>=1.45.1",
    "yfinance>=0.2.61",
    "scikit-learn>=1.3.2",
]
